# jkfmdqsdfs

./: classify.py  hunks.py  pyproject.toml  readme.md  scratchpad.py  vrac.py
blackboard/: blackboard.py  compose.py  main.py  metrics.db  metrics_model.py  query.py  strategies.py  telemetry.py
contrib/sqlite_semver/: __init__.py  semver.cpp  semver.hpp
pipo/: Untitled.ipynb  embedding.py
présentation/: deck.md  no_rag.puml  rag.puml
rag/: engine.py  environment.py  irc.py  issue.py  playground.py  prompts.py
rag/_fixtures/: chat.py
rag/datasources/: jira.py
rag/templates/embedding/: jira.jinja2
rag/templates/indexing/: symphony.jinja2
rag/templates/prompts/: detect_errors.jinja2  extract.jinja2  react.jinja2
rag2/: __main__.py  compose.py  endpoint.py  engine.py  issue.py  prompt.py
rag2/_fixtures/: mock.py
rag2/datasources/: chat.py  jira.py  vectorstore.py
rag2/templates/embedding/: chat.jinja2
rag2/templates/prompts/: detect_errors.jinja2  extract.jinja2  question_answer.jinja2
rag3/: import_jiras.py  pipo.py
ragv2/docs/: non_reg.md  param_tuning.md  questions.md  rats.puml  references.md  sequence.puml  specs.md  threads.md
ragv2/rats/: elastic_mapper.py  git.py  rat_king.py  tracker_id.py
ragv2/script/: data.pkl
resources/scripts/: create_table.sql  create_tables.sh  jiras.sql
sandbox/: dashboard.py  draganddrop.py  hrs.py  perplexity.py  splash_screen.py  thread_classification_ui.py  thread_onset.py  todo.txt
test/: extract.py
tests/: prompts.py  test_chains.py  test_extract.py  test_retrieve.py
(+13 files in other folders)
