[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag"
version = "0.0.1"
dependencies = [
    "langchain",
    "jinja2",
    "tyro",
    "pytest",
    "pytest-asyncio"
]

[tool.setuptools]
packages = ["rag"]

[tool.pytest.ini_options]
required_plugins = ["pytest-asyncio"]
testpaths = [
    "tests",
]

[project.scripts]
rag = "rag.main:main"
